Minor design bug: UnitName alignmnet in histogram axis

--- a/keshif.less
+++ b/keshif.less
@@ -1110,7 +1110,7 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
                         left: -27px;
                         width: 15px;
                         position: absolute;
-                        top: -1px;
+                        //top: -1px;
                         text-align: right;
                         font-weight: 300;/*
                         &::after{
